# audio-classification-project

./: .gitignore  README.md  pyproject.toml
audio_classification/data/: dataloader.py  dataset.py
audio_classification/models/: cnn.py
audio_classification/training/: train.py
notebooks/: data_demo.ipynb  evaluation.ipynb  test_model.ipynb
outputs/logs/: training_history_20260603_141827.csv
outputs/models/: best_model.pth
scripts/: split.py
