[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-classification"
version = "0.1.0"
description = "Audio classification project using spectrograms"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "pillow"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["audio_classification*"]
